[package]
name = "triangles"
version = "0.1.0"
edition = "2021"
default-run = "triangles"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "triangles"
path = "src/bin/perimeter.rs"

[[bin]]
name = "jsonify"
path = "src/bin/jsonify.rs"